@@ -3,42 +3,6 @@
 ### Definition of the lobby screen
 ###
 
-#define GAMELISTBOX_BODY_LABEL_TINY ID LABEL
-	[column]
-		border = "right"
-		border_size = 5
-		[label]
-			id = {ID}
-			definition = "default_tiny"
-			label = {LABEL}
-		[/label]
-	[/column]
-#enddef
-
-#define GAMELISTBOX_BODY_IMAGE ID LABEL TOOLTIP GROW_FACTOR
-	[column]
-		grow_factor = {GROW_FACTOR}
-		horizontal_grow = true
-		border = "all"
-		border_size = 5
-		[image]
-			id = {ID}
-			definition = "default"
-			label = {LABEL}
-			tooltip = {TOOLTIP}
-		[/image]
-	[/column]
-#enddef
-
-#define GAMELISTBOX_LABEL LABEL
-	[column]
-		[label]
-			definition = "default"
-			label = {LABEL}
-		[/label]
-	[/column]
-#enddef
-
 #define GAMELISTBOX
 	[listbox]
 		id = "game_list"
@@ -46,13 +10,17 @@
 
 		vertical_scrollbar_mode = "always"
 		horizontal_scrollbar_mode = "auto"
+
 		[header]
+
 			[row]
+
 				[column]
 					grow_factor = 1
 					horizontal_grow = true
 					border = "bottom,right"
 					border_size = 5
+
 					[label]
 						id = "map"
 						definition = "default"
@@ -61,18 +29,27 @@
 				[/column]
 			[/row]
 		[/header]
+
 		[list_definition]
+
 			[row]
+
 				[column]
 					horizontal_grow = true
+
 					[toggle_panel]
 						id = "panel"
 						definition = "default"
+
 						[grid]
+
 							[row]
+
 								[column]
 									grow_factor = 0
-									{GUI_FORCE_WIDGET_MINIMUM_SIZE 72 72 (
+									vertical_alignment = "center"
+
+									{GUI_FORCE_WIDGET_MINIMUM_SIZE 82 82 (
 										border = "all"
 										border_size = 5
 										[minimap]
@@ -81,16 +58,36 @@
 										[/minimap]
 									)}
 								[/column]
+
 								[column]
 									grow_factor = 1
 									horizontal_grow = true
+
 									[grid]
+
 										[row]
+
 											[column]
 												grow_factor = 1
 												border = "all"
 												border_size = 3
 												horizontal_alignment = "left"
+
+												[label]
+													id = "scenario"
+													definition = "default_large"
+												[/label]
+											[/column]
+										[/row]
+
+										[row]
+
+											[column]
+												grow_factor = 1
+												horizontal_grow = true
+												border = "left,right"
+												border_size = 3
+
 												[label]
 													id = "name"
 													definition = "default"
@@ -98,148 +95,62 @@
 											[/column]
 										[/row]
 
-										[row]
-											[column]
-												grow_factor = 1
-												horizontal_grow = true
-												border = "left,right"
-												border_size = 3
-												[label]
-													id = "scenario"
-													definition = "default"
-												[/label]
-											[/column]
-										[/row]
-
-										[row]
-											[column]
-												grow_factor = 1
-												horizontal_grow = true
-
-												[grid]
-
-													[row]
-														grow_factor = 1
-
-														[column]
-															grow_factor = 0
-															horizontal_grow = true
-															border = "left,top,bottom"
-															border_size = 3
-															[label]
-																id = "era_label"
-																definition = "default_small"
-																label = _ "Era:"
-															[/label]
-														[/column]
-
-														[column]
-															grow_factor = 0
-															horizontal_grow = true
-															border = "all"
-															border_size = 3
-															[label]
-																id = "era"
-																definition = "default_small"
-															[/label]
-														[/column]
-
-														[column]
-															grow_factor = 0
-															horizontal_grow = true
-															border = "all"
-															border_size = 3
-															[label]
-																id = "dash"
-																definition = "default"
-																label = " — "
-															[/label]
-														[/column]
-
-														[column]
-															grow_factor = 0
-															horizontal_grow = true
-															border = "left,top,bottom"
-															border_size = 3
-															[label]
-																id = "mods_label"
-																definition = "default_small"
-																label = _ "Modifications:"
-															[/label]
-														[/column]
-
-														[column]
-															grow_factor = 1
-															horizontal_grow = true
-															border = "all"
-															border_size = 3
-															[label]
-																id = "mods"
-																definition = "default_small"
-															[/label]
-														[/column]
-													[/row]
-												[/grid]
-
-											[/column]
-										[/row]
 									[/grid]
+
 								[/column]
+
 								[column]
 									grow_factor = 0
+									border = "all"
+									border_size = 5
 									horizontal_alignment = "right"
+									[label]
+										id = "status"
+										definition = "default_large"
+									[/label]
+								[/column]
+
+								[column]
+									grow_factor = 0
+									border = "all"
+									border_size = 5
+									horizontal_alignment = "right"
+									vertical_grow = true
+
+									[image]
+										id = "game_info"
+										definition = "centered"
+										label = "icons/icon-info.png"
+									[/image]
+								[/column]
+
+								[column]
+									horizontal_alignment = "right"
+
 									[grid]
+
 										[row]
 
 											[column]
 												grow_factor = 0
-												border = "left,right,bottom"
-												border_size = 5
-												horizontal_alignment = "right"
-												[label]
-													id = "status"
-													definition = "default"
-												[/label]
-											[/column]
-
-										[/row]
-
-										[row]
-											[column]
 												horizontal_grow = true
-												[grid]
-													[row]
-														{GAMELISTBOX_BODY_IMAGE      "map_size_icon"      "misc/map.png"            "" 0}
-														{GAMELISTBOX_BODY_LABEL_TINY "map_size_text"      "900x900"}
-														{GAMELISTBOX_BODY_IMAGE      "observer_icon"      "misc/eye.png"            "" 0}
-														{GAMELISTBOX_BODY_IMAGE      "shuffle_sides_icon" "misc/shuffle-sides.png" _"Assign sides to players at random" 0}
-														{GAMELISTBOX_BODY_IMAGE      "needs_password"     "misc/key.png"           _"Requires a password to join" 0}
-														{GAMELISTBOX_BODY_IMAGE      "registered_only"    "misc/registered_users_only.png" _"Only registered users may join" 0}
-														{GAMELISTBOX_BODY_IMAGE      "use_map_settings"   "misc/ums.png"           _"Use map settings" 0}
-														{GAMELISTBOX_BODY_IMAGE      "reloaded"           "misc/reloaded.png"      _"Reloaded game" 0}
-														{GAMELISTBOX_BODY_IMAGE      "no_era"             "misc/qmark.png"         _"Unknown era" 0}
-														{GAMELISTBOX_BODY_IMAGE      "vision_icon"        ""                        "" 0}
-														{GAMELISTBOX_BODY_IMAGE      "gold_icon"          "themes/gold.png"        _"Gold per village" 0}
-														{GAMELISTBOX_BODY_LABEL_TINY "gold_text"          "265"}
-														{GAMELISTBOX_BODY_IMAGE      "xp_icon"            "themes/units.png"       _"Experience modifier" 0}
-														{GAMELISTBOX_BODY_LABEL_TINY "xp_text"            "70%"}
-														{GAMELISTBOX_BODY_IMAGE      "time_limit_icon"    "themes/sand-clock.png"  _"Time limit" 0}
-														{GAMELISTBOX_BODY_LABEL_TINY "time_limit_text"    ""}
-													[/row]
-												[/grid]
+												border = "all"
+												border_size = 5
+
+												[image]
+													id = "needs_password"
+													definition = "default"
+													label = "misc/key.png"
+													tooltip = _ "Requires a password to join"
+												[/image]
 											[/column]
-										[/row]
-									[/grid]
-								[/column]
-								[column]
-									horizontal_alignment = "right"
-									[grid]
-										[row]
+
 											[column]
 												grow_factor = 1
 												horizontal_alignment = "right"
 												border = "top,left,right"
 												border_size = 5
+
 												[button]
 													id = "join"
 													definition = "default"
@@ -247,12 +158,28 @@
 												[/button]
 											[/column]
 										[/row]
+
 										[row]
+
+											[column]
+												grow_factor = 0
+												horizontal_grow = true
+												border = "all"
+												border_size = 5
+
+												[image]
+													id = "observer_icon"
+													definition = "default"
+													label = "misc/eye.png"
+												[/image]
+											[/column]
+
 											[column]
 												grow_factor = 1
 												horizontal_alignment = "right"
 												border = "all"
 												border_size = 5
+
 												[button]
 													id = "observe"
 													definition = "default"
@@ -886,7 +813,7 @@
 										[/column]
 									[/row]
 
-									{GUI_HORIZONTAL_SPACER_LINE}
+									#{GUI_HORIZONTAL_SPACER_LINE}
 
 									[row]
 										grow_factor = 1
