@@ -5,6 +5,7 @@ Version 1.13.10+dev:
    * Removed broken Unit Box and Widescreen themes.
    * Fixed a bug that partially prevented movement feedback announce messages
      to be displayed (UI regression bug #2130, affecting 1.13.8 and 1.13.10).
+   * New, greatly simplified display of games in the MP Lobby.
  * WML Engine:
    * File paths with backslashes are no longer allowed. This ensures that a UMC
      author can't accidentally use them and make an add-on that breaks on
